Trying to fix template syntax for interfaces_layer_2_template.j2

--- a/templates/interfaces_layer_2_template.j2
+++ b/templates/interfaces_layer_2_template.j2
@@ -4,24 +4,24 @@
 {% for interface in ansible_facts.network_resources.l2_interfaces if 'mode' in interface %}
 {% if 'up' in ansible_facts['net_interfaces'][interface.name]['operstatus'] %}
 Interface: {{interface.name}}
- - STATE: {{ansible_facts['net_interfaces'][interface.name]['operstatus']}}
- - Mode: {{interface.mode}}
+- STATE: {{ansible_facts['net_interfaces'][interface.name]['operstatus']}}
+- Mode: {{interface.mode}}
 {% if 'trunk' in interface %}
- - Trunk Allowed VLANs:
+- Trunk Allowed VLANs:
 {% for vlan in interface.trunk.allowed_vlans %}
-   - {{vlan}}
+- {{vlan}}
 {% endfor %}
 {% else %}
- - Access VLAN: {{interface.access.vlan}}
+- Access VLAN: {{interface.access.vlan}}
 {% endif %}
- - MAC Address: {{ansible_facts['net_interfaces'][interface.name]['macaddress']}}
- - Description: {{ansible_facts['net_interfaces'][interface.name]['description']}}
- - MTU: {{ansible_facts['net_interfaces'][interface.name]['mtu']}}
- - Bandwidth: {{ansible_facts['net_interfaces'][interface.name]['bandwidth']}}
- - Duplex: {{ansible_facts['net_interfaces'][interface.name]['duplex']}}
+- MAC Address: {{ansible_facts['net_interfaces'][interface.name]['macaddress']}}
+- Description: {{ansible_facts['net_interfaces'][interface.name]['description']}}
+- MTU: {{ansible_facts['net_interfaces'][interface.name]['mtu']}}
+- Bandwidth: {{ansible_facts['net_interfaces'][interface.name]['bandwidth']}}
+- Duplex: {{ansible_facts['net_interfaces'][interface.name]['duplex']}}
 {% if ansible_facts['net_interfaces'][interface.name]['ipv4']|length > 0 %}
 {% for ip in ansible_facts['net_interfaces'][interface.name]['ipv4'] %}
- - IP Address: {{ip.address}}/{{ip.subnet}}
+- IP Address: {{ip.address}}/{{ip.subnet}}
 {% endfor %}
 {% endif %}
 !
@@ -30,33 +30,34 @@ Interface: {{interface.name}}
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~ LAYER 2 INTERFACES IN DOWN STATE ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-{% set index = 0 %}
+{% set populated = false %}
 {% for interface in ansible_facts.network_resources.l2_interfaces if 'mode' in interface %}
-{% if 'down' in ansible_facts['net_interfaces'][interface.name]['operstatus'] %}
+{% if 'up' in ansible_facts['net_interfaces'][interface.name]['operstatus'] %}
 Interface: {{interface.name}}
- - STATE: {{ansible_facts['net_interfaces'][interface.name]['operstatus']}}
- - Mode: {{interface.mode}}
+- STATE: {{ansible_facts['net_interfaces'][interface.name]['operstatus']}}
+- Mode: {{interface.mode}}
 {% if 'trunk' in interface %}
- - Trunk Allowed VLANs:
+- Trunk Allowed VLANs:
 {% for vlan in interface.trunk.allowed_vlans %}
-   - {{vlan}}
+- {{vlan}}
 {% endfor %}
 {% else %}
- - Access VLAN: {{interface.access.vlan}}
+- Access VLAN: {{interface.access.vlan}}
 {% endif %}
- - MAC Address: {{ansible_facts['net_interfaces'][interface.name]['macaddress']}}
- - Description: {{ansible_facts['net_interfaces'][interface.name]['description']}}
- - MTU: {{ansible_facts['net_interfaces'][interface.name]['mtu']}}
- - Bandwidth: {{ansible_facts['net_interfaces'][interface.name]['bandwidth']}}
- - Duplex: {{ansible_facts['net_interfaces'][interface.name]['duplex']}}
+- MAC Address: {{ansible_facts['net_interfaces'][interface.name]['macaddress']}}
+- Description: {{ansible_facts['net_interfaces'][interface.name]['description']}}
+- MTU: {{ansible_facts['net_interfaces'][interface.name]['mtu']}}
+- Bandwidth: {{ansible_facts['net_interfaces'][interface.name]['bandwidth']}}
+- Duplex: {{ansible_facts['net_interfaces'][interface.name]['duplex']}}
 {% if ansible_facts['net_interfaces'][interface.name]['ipv4']|length > 0 %}
 {% for ip in ansible_facts['net_interfaces'][interface.name]['ipv4'] %}
- - IP Address: {{ip.address}}/{{ip.subnet}}
+- IP Address: {{ip.address}}/{{ip.subnet}}
 {% endfor %}
 {% endif %}
 !
+{% set populated = true}
 {% endif %}
 {% endfor %}
-{% if index = 0 %}
+{% if populated != true %}
 NONE
 {% endif %}
