Trying to fix template syntax for interfaces_layer_2_template.j2 - had missing closing bracket

--- a/templates/interfaces_layer_2_template.j2
+++ b/templates/interfaces_layer_2_template.j2
@@ -55,7 +55,7 @@ Interface: {{interface.name}}
 {% endfor %}
 {% endif %}
 !
-{% set populated = true}
+{% set populated = true %}
 {% endif %}
 {% endfor %}
 {% if populated != true %}
