--- a/templates/interfaces_layer_2_template.j2
+++ b/templates/interfaces_layer_2_template.j2
@@ -32,7 +32,7 @@ Interface: {{interface.name}}
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 {% set populated = false %}
 {% for interface in ansible_facts.network_resources.l2_interfaces if 'mode' in interface %}
-{% if 'up' in ansible_facts['net_interfaces'][interface.name]['operstatus'] %}
+{% if 'down' in ansible_facts['net_interfaces'][interface.name]['operstatus'] %}
 Interface: {{interface.name}}
 - STATE: {{ansible_facts['net_interfaces'][interface.name]['operstatus']}}
 - Mode: {{interface.mode}}
