Fixing incorrect reference to the inventory dictionary within the inventory_template.j2 template

--- a/templates/inventory_template.j2
+++ b/templates/inventory_template.j2
@@ -7,7 +7,7 @@ all:
     ansible_become_method: enable
     ansible_network_os: cisco.ios.ios
     ansible_connection: ansible.netcommon.network_cli
-  {% for group,host_list in inventory_object.items() %}
+  {% for group,host_list in inventory_object.inventory_dict_info.items() %}
   {{group}}:
     hosts:
     {% for host in host_list %}
@@ -18,4 +18,3 @@ all:
           ansible_become_password: {{host.ansible_become_password}}
     {% endfor %}
   {% endfor %}
-            
