fixing inventory yml syntax in j2 template

--- a/templates/inventory_template.j2
+++ b/templates/inventory_template.j2
@@ -7,14 +7,15 @@ all:
     ansible_become_method: enable
     ansible_network_os: cisco.ios.ios
     ansible_connection: ansible.netcommon.network_cli
-  {% for group,host_list in inventory_object.inventory_dict_info.items() %}
-  {{group}}:
-    hosts:
-    {% for host in host_list %}
-      {{host.host_ip}}:
-        vars:
-          ansible_user: {{host.ansible_user}}
-          ansible_password: {{host.ansible_password}}
-          ansible_become_password: {{host.ansible_become_password}}
+  children:
+    {% for group,host_list in inventory_object.inventory_dict_info.items() %}
+    {{group}}:
+      hosts:
+      {% for host in host_list %}
+        {{host.host_ip}}:
+          vars:
+            ansible_user: {{host.ansible_user}}
+            ansible_password: {{host.ansible_password}}
+            ansible_become_password: {{host.ansible_become_password}}
+      {% endfor %}
     {% endfor %}
-  {% endfor %}
